# notice-rss

./: Cargo.toml  LICENSE  README.md  index.html  last_index  rss.xml
.github/workflows/: publish.yml
src/: main.rs
